update spacing, fix button styles

--- a/website/assets/styles/bootstrap-overrides.less
+++ b/website/assets/styles/bootstrap-overrides.less
@@ -56,7 +56,7 @@ b, strong, .font-weight-bold {
   color: @core-fleet-black;
 }
 
-a[href]:not([no-underline]) {
+a[href] {
   color: @core-fleet-black-75;
   text-decoration: underline;
   text-underline-offset: 4px;
